--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -12,13 +12,14 @@
         <div class="col-6">
         </div>
         <div class="col-6 text-right">
-            <a href="/">Home</a>&nbsp;|&nbsp;<a href="/login">Login</a>
+            <a href="/home">Home</a>&nbsp
         </div>
     </div>
     <div class="row"><h2>User List</h2></div>
     <div class="row">
-        <a href="/user/add" class="btn btn-primary btn-sm">Add New</a>
-        <table class="table table-bordered">
+        <a href="/user/add" class="btn btn-primary btn-sm">Add user</a>
+        <p></p>
+        <table border="1">
             <thead>
             <tr>
                 <th>Id</th>
@@ -28,11 +29,12 @@
             </tr>
             </thead>
             <tbody>
-            <tr th:each="user : ${users}">
-                <td style="width: 10%" th:text="${user.id}"></td>
-                <td th:text="${user.username}"></td>
-                <td style="width: 25%" th:text="${user.role}"></td>
-                <td style="width: 15%" class="text-center">
+            <tr th:each="user, iStat : ${userList}" th:style="${iStat.odd}? 'font-weight: normal;'">
+
+                <td style="width: 20%" class="text-center" th:text="${user.id}"></td>
+                <td class="text-center" th:text="${user.username}"></td>
+                <td style="width: 35%" class="text-center" th:text="${user.role}"></td>
+                <td style="width: 25%" class="text-center">
                     <a th:href="@{/user/update/{id}(id=${user.id})}">Edit</a>&nbsp;|&nbsp;
                     <a th:href="@{/user/delete/{id}(id=${user.id})}" onclick="return confirm('Are you sure you want to delete this item?')">Delete</a>
                 </td>
