--- a/src/main/resources/templates/patient/update.html
+++ b/src/main/resources/templates/patient/update.html
@@ -25,14 +25,14 @@
       <div class="form-group">
         <label for="firstName" class="col-sm-2 control-label">Patient firstName</label>
         <div class="col-sm-10">
-          <input type="text" th:field="*{firstName}" id="firstName" placeholder="firstName" class="col-4">
+          <input type="text" required th:field="*{firstName}" id="firstName" placeholder="firstName" class="col-4">
           <p class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></p>
         </div>
       </div>
       <div class="form-group">
         <label for="lastName" class="col-sm-2 control-label">Patient lastName</label>
         <div class="col-sm-10">
-          <input type="text" th:field="*{lastName}" id="lastName" placeholder="Patient lastName" class="col-4">
+          <input type="text" required th:field="*{lastName}" id="lastName" placeholder="Patient lastName" class="col-4">
           <p class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></p>
         </div>
       </div>
@@ -44,12 +44,12 @@
         </div>
       </div>
       <div class="form-group">
-        <label for="sex" class="col-sm-2 control-label">Sex</label>
+        <label for="sex" class="col-sm-2 control-label">Genre</label>
         <div class="col-sm-10">
-          <label class="checkbox-inline"><input type="radio"
-                                                th:field="*{sex}" th:value="M">Male</label> <label
-                class="checkbox-inline"><input type="radio"
-                                               th:field="*{sex}" th:value="F">Female</label>
+          <label class="checkbox-inline"><input type="radio" required
+                                                th:field="*{sex}" th:value="M"> Male  </label> <label
+                class="checkbox-inline"><input type="radio" required
+                                               th:field="*{sex}" th:value="F"> Female</label>
           <p class="text-danger" th:if="${#fields.hasErrors('sex')}"
              th:errors="*{sex}"></p>
         </div>
