--- a/src/main/resources/templates/patient/add.html
+++ b/src/main/resources/templates/patient/add.html
@@ -46,14 +46,14 @@
             </div>
 
             <div class="form-group">
-                <label for="sex" class="col-sm-2 control-label">Sex</label>
+                <label for="genre" class="col-sm-2 control-label">genre</label>
                 <div class="col-sm-10">
                     <label class="checkbox-inline"><input type="radio" required
-                                                          th:field="*{sex}" th:value="M"> Male  </label> <label
+                                                          th:field="*{genre}" th:value="M"> Male  </label> <label
                         class="checkbox-inline"><input type="radio" required
-                                                       th:field="*{sex}" th:value="F"> Female</label>
-                    <p class="text-danger" th:if="${#fields.hasErrors('sex')}"
-                       th:errors="*{sex}"></p>
+                                                       th:field="*{genre}" th:value="F"> Female</label>
+                    <p class="text-danger" th:if="${#fields.hasErrors('genre')}"
+                       th:errors="*{genre}"></p>
                 </div>
             </div>
             <div class="form-group">
