--- a/src/main/resources/templates/patient/list.html
+++ b/src/main/resources/templates/patient/list.html
@@ -23,7 +23,7 @@
       <thead>
       <tr>
         <th>Id</th>
-        <th>Firstname</th>
+        <th>firstName</th>
         <th>lastName</th>
         <th>Date of birth</th>
         <th>Gender</th>
@@ -37,7 +37,7 @@
         <td th:text="${patient.firstName}"></td>
         <td th:text="${patient.lastName}"></td>
         <td th:text="${patient.birthdate}"></td>
-        <td th:text="${patient.sex}"></td>
+        <td th:text="${patient.genre}"></td>
         <td th:text="${patient.address}"></td>
         <td th:text="${patient.phone}"></td>
         <td class="text-center" style="width: 15%">
