--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8"/>
     <title> Mediscreen App </title>
     <link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../static/css/style.default.css">
 </head>
 <body>
 <div class="container">
