Update template page

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -22,16 +22,15 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <link rel="stylesheet" type="text/css" th:href="@{~/css/bootstrap.min.css}" />
-    <!--<link rel="stylesheet" type="text/css" th:href="@{~/css/style.default.css}" />-->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body marginwidth="0" marginheight="0">
 <div class="container">
     <div class="row">
-        <div class="col-6">
-        </div>
-        <div class="col-md-4 ml-auto">
-            <a href="/home">Home</a>&nbsp
+        <div class="border-left">
+            <button type="button" class="btn btn-outline-info">
+                <a href="/home">Home</a>&nbsp
+            </button>
         </div>
     </div>
     <div class="row">
