--- a/src/main/resources/templates/user/update.html
+++ b/src/main/resources/templates/user/update.html
@@ -4,16 +4,15 @@
 <head>
     <meta charset="utf-8"/>
     <title> Mediscreen App </title>
-    <link rel="stylesheet" type="text/css" href="../../static/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../../static/css/style.default.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
     <div class="row">
-        <div class="col-6">
-        </div>
-        <div class="col-6 text-right">
-            <a href="/home">Home</a>&nbsp
+        <div class="border-left">
+            <button type="button" class="btn btn-outline-info">
+                <a href="/home">Home</a>&nbsp
+            </button>
         </div>
     </div>
     <div class="row">
