--- a/src/main/resources/templates/patient/list.html
+++ b/src/main/resources/templates/patient/list.html
@@ -4,22 +4,24 @@
 <head>
   <meta charset="utf-8"/>
   <title> Mediscreen App </title>
-  <link href="../../static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
   <div class="row">
-    <div class="col-6">
-    </div>
-    <div class="col-6 text-right">
-      <a href="/home">Home</a>&nbsp
+    <div class="border-left">
+      <button type="button" class="btn btn-outline-info">
+        <a href="/home">Home</a>&nbsp
+      </button>
     </div>
   </div>
-  <div class="row"><h2>Patient List</h2></div>
+  <p></p>
+  <p class="display-1 blockquote text-center mb-1 bg-primary lead">List of patients</p>
+  <p></p>
   <div class="row">
     <a class="btn btn-primary btn-sm" href="/patient/add">Add New</a>
     <p></p>
-    <table border="1">
+    <table class="table table-hover">
       <thead>
       <tr>
         <th>Id</th>
@@ -41,8 +43,8 @@
         <td th:text="${patient.address}"></td>
         <td th:text="${patient.phone}"></td>
         <td class="text-center" style="width: 15%">
-          <a th:href="@{/patient/update/{id}(id=${patient.id})}">Edit</a>&nbsp;|&nbsp;
-          <a onclick="return confirm('Are you sure you want to delete this item?')" th:href="@{/patient/delete/{id}(id=${patient.id})}">Delete</a>
+          <a class="btn btn-info btn-sm" th:href="@{/patient/update/{id}(id=${patient.id})}">Edit</a>&nbsp;|&nbsp;
+          <a class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this item?')" th:href="@{/patient/delete/{id}(id=${patient.id})}">Delete</a>
         </td>
       </tr>
       </tbody>
