--- a/src/main/resources/templates/patient/add.html
+++ b/src/main/resources/templates/patient/add.html
@@ -15,11 +15,12 @@
         </button>
         </div>
     </div>
-    <div class="row">
-        <h2>Add New Patient</h2>
-    </div>
+    <p>    </p>
+    <fieldset class="scheduler-border">
+        <legend class="scheduler-border">Add New Patient</legend>
+    </fieldset>
 
-    <div class="row">
+    <fieldset class="row">
         <form action="#" th:action="@{/patient/validate}" th:object="${patient}"
               method="post" class="form-horizontal" style="width: 100%">
             <div class="form-group">
@@ -46,7 +47,7 @@
             </div>
 
             <div class="form-group">
-                <label for="genre" class="col-sm-2 control-label">genre</label>
+                <label for="genre" class="col-sm-2 control-label">Genre</label>
                 <div class="col-sm-10">
                     <label class="checkbox-inline"><input type="radio" required
                                                           th:field="*{genre}" th:value="M"> Male  </label> <label
@@ -70,9 +71,8 @@
                     <p class="text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></p>
                 </div>
             </div>
-
-
             <div class="form-group">
+                <p>    </p>
                 <div class="col-sm-12">
                     <a class="btn btn-danger btn-sm" href="/patient/list">Cancel</a> <input
                         class="btn btn-primary btn-sm" type="submit" value="Add patient">
@@ -80,7 +80,7 @@
             </div>
 
         </form>
-    </div>
+    </fieldset>
 
 </div>
 
