--- a/src/main/resources/templates/patient/list.html
+++ b/src/main/resources/templates/patient/list.html
@@ -18,7 +18,7 @@
   <p></p>
   <p class="display-1 blockquote text-center mb-1 bg-primary lead">List of patients</p>
   <p></p>
-  <div class="row">
+  <div class="table-responsive">
     <a class="btn btn-primary btn-sm" href="/patient/add">Add New</a>
     <p></p>
     <table class="table table-hover">
@@ -42,9 +42,13 @@
         <td th:text="${patient.genre}"></td>
         <td th:text="${patient.address}"></td>
         <td th:text="${patient.phone}"></td>
-        <td class="text-center" style="width: 15%">
-          <a class="btn btn-info btn-sm" th:href="@{/patient/update/{id}(id=${patient.id})}">Edit</a>&nbsp;|&nbsp;
+        <td class="margin-right: 5px">
+          <a class="btn btn-info btn-sm" th:href="@{/patient/update/{id}(id=${patient.id})}">Edit</a>
           <a class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this item?')" th:href="@{/patient/delete/{id}(id=${patient.id})}">Delete</a>
+        </td>
+        <td class="margin-right: 5px">
+          <a class="btn btn-primary btn-sm" >Notes</a>
+          <a class="btn btn-primary btn-sm" >Assess</a>
         </td>
       </tr>
       </tbody>
