--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -18,7 +18,7 @@
     <p></p>
     <p class="display-1 blockquote text-center mb-1 bg-primary lead">List of registred users</p>
     <p></p>
-    <div class="row">
+    <div class="table-responsive">
         <a href="/user/add" class="btn btn-primary btn-sm">Add user</a>
         <p></p>
         <table class="table table-hover">
@@ -27,7 +27,6 @@
                 <th>Id</th>
                 <th>User Name</th>
                 <th>Role</th>
-                <th>Action</th>
             </tr>
             </thead>
             <tbody>
@@ -36,8 +35,8 @@
                 <td style="width: 10%"  th:text="${user.id}"></td>
                 <td th:text="${user.username}"></td>
                 <td th:text="${user.role}"></td>
-                <td class="text-center" style="width: 15%" >
-                    <a class="btn btn-info btn-sm"  th:href="@{/user/update/{id}(id=${user.id})}">Edit</a>&nbsp;|&nbsp;
+                <td class="margin-right: 5px">
+                    <a class="btn btn-info btn-sm"  th:href="@{/user/update/{id}(id=${user.id})}">Edit</a>
                     <a class="btn btn-danger btn-sm"  th:href="@{/user/delete/{id}(id=${user.id})}"
                        onclick="return confirm('Are you sure you want to delete this item?')">Delete</a>
                 </td>
