--- a/src/main/resources/templates/patient/list.html
+++ b/src/main/resources/templates/patient/list.html
@@ -47,7 +47,7 @@
           <a class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this item?')" th:href="@{/patient/delete/{id}(id=${patient.id})}">Delete</a>
         </td>
         <td class="margin-right: 5px">
-          <a class="btn btn-primary btn-sm" >Notes</a>
+          <a class="btn btn-primary btn-sm" th:href="@{/patient/patHistory/list/{id}(id=${patient.id})}">Notes</a>
           <a class="btn btn-primary btn-sm" >Assess</a>
         </td>
       </tr>
