--- a/src/main/resources/templates/patHistory/update.html
+++ b/src/main/resources/templates/patHistory/update.html
@@ -20,11 +20,11 @@
   <p class="row"> <h4> Patient : <span th:text="${patient.get().firstName} + ' ' + ${patient.get().lastName} + ' (' + ${patient.get().birthdate} + ')'"></span></h4><br/></p>
   <p></p>
   <div class="row">
-    <form action="#" th:action="@{/note/update/{id}(id=${note.id})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
+    <form action="#" th:action="@{/patient/{id}/patHistory/update/{noteId}(id=${patient.get().getId()},noteId=${note.getId()})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
       <div class="form-group">
         <label for="dateNote" class="col-sm-2 control-label">Date</label>
         <div class="col-sm-10">
-          <input type="date" th:field="*{dateNote}" id="dateNote" placeholder="dateNote" class="col-4">
+          <input type="date"  th:field="*{dateNote}" id="dateNote" placeholder="dateNote" class="col-4 form-control">
           <p class="text-danger" th:if="${#fields.hasErrors('dateNote')}" th:errors="*{dateNote}"></p>
         </div>
       </div>
@@ -36,7 +36,6 @@
           <p class="text-danger" th:if="${#fields.hasErrors('textNote')}" th:errors="*{textNote}"></p>
         </div>
       </div>
-
      <div class="form-group">
         <div class="col-sm-12">
           <input type="hidden" th:field="*{id}">
