--- a/src/main/resources/templates/patHistory/list.html
+++ b/src/main/resources/templates/patHistory/list.html
@@ -35,7 +35,7 @@
                 <td th:text="${note.textNote}"></td>
               <td class="margin-right: 15px">
                     <a class="btn btn-info btn-sm" th:href="@{/patient/patHistory/update/{id}(id=${note.id})}">Edit</a>
-                    <a class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this item?')" th:href="@{/patHistory/delete/{id}(id=${note.id})}">Delete</a>
+                    <a class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this item?')" th:href="@{/patient/{id}/patHistory/delete/{noteId}(id=${patient.getId()},noteId=${note.getId()})}">Delete</a>
                 </td>
             </tr>
             </tbody>
