Controller : add note OK + refactor

--- a/src/main/resources/templates/patHistory/list.html
+++ b/src/main/resources/templates/patHistory/list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8"/>
     <title> Mediscreen App </title>
@@ -20,7 +20,7 @@
     <p class="row"> <h4> Patient : <span th:text="${patient.getFirstName()} + ' ' + ${patient.getLastName()} + ' (' + ${patient.getBirthdate()} + ')'"></span></h4><br/>
     <p></p>
     <div class="table-responsive">
-        <a class="btn btn-primary btn-sm" href="/patient/add">Add New Note</a>
+        <a class="btn btn-primary btn-sm" th:href="@{/patient/patHistory/add/{id}(id=${patient.getId()})}">Add New Note</a>
         <p></p>
         <table class="table table-hover">
             <thead>
@@ -33,7 +33,7 @@
             <tr th:each="note, iStat : ${noteList}" th:style="${iStat.odd}? 'font-weight: normal;'">
                 <td style="width: 10%" th:text="${note.dateNote}"></td>
                 <td th:text="${note.textNote}"></td>
-              <td class="margin-right: 15px">
+              <td class="col-sm-4">
                     <a class="btn btn-info btn-sm" th:href="@{/patient/patHistory/update/{id}(id=${note.id})}">Edit</a>
                     <a class="btn btn-danger btn-sm" onclick="return confirm('Are you sure you want to delete this item?')" th:href="@{/patient/{id}/patHistory/delete/{noteId}(id=${patient.getId()},noteId=${note.getId()})}">Delete</a>
                 </td>
