--- a/src/main/resources/templates/patient/add.html
+++ b/src/main/resources/templates/patient/add.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" lang="en">
 <head>
     <meta charset="utf-8"/>
     <title> Mediscreen App </title>
@@ -26,7 +26,7 @@
             <div class="form-group">
                 <label for="firstName" class="col-sm-2 control-label">firstName</label>
                 <div class="col-sm-10">
-                    <input type="text" required th:field="*{firstName}" id="firstName" placeholder="firstName" class="col-4">
+                    <input type="text" required th:field="*{firstName}" id="firstName" placeholder="Patient firstName" class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></p>
                 </div>
             </div>
@@ -41,7 +41,7 @@
             <div class="form-group">
                 <label for="birthdate" class="col-sm-2 control-label">Date of Birth</label>
                 <div class="col-sm-10">
-                    <input type="date" th:field="*{birthdate}" id="birthdate" placeholder="birthdate" class="col-4">
+                    <input type="date" th:field="*{birthdate}" id="birthdate" placeholder="Patient birthdate" class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('birthdate')}" th:errors="*{birthdate}"></p>
                 </div>
             </div>
@@ -60,14 +60,14 @@
             <div class="form-group">
                 <label for="address" class="col-sm-2 control-label">address</label>
                 <div class="col-sm-10">
-                    <input type="text" th:field="*{address}" id="address" placeholder="address" class="col-4">
+                    <input type="text" th:field="*{address}" id="address" placeholder="Patient address" class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
                 </div>
             </div>
             <div class="form-group">
                 <label for="phone" class="col-sm-2 control-label">Phone Number</label>
                 <div class="col-sm-10">
-                    <input type="text" th:field="*{phone}" id="phone" placeholder="phone" class="col-4">
+                    <input type="text" th:field="*{phone}" id="phone" placeholder="Patient phone" class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></p>
                 </div>
             </div>
