--- a/src/main/resources/templates/patient/list.html
+++ b/src/main/resources/templates/patient/list.html
@@ -48,7 +48,7 @@
         </td>
         <td class="margin-right: 5px">
           <a class="btn btn-primary btn-sm" th:href="@{/patient/patHistory/list/{id}(id=${patient.id})}">Notes</a>
-          <a class="btn btn-primary btn-sm" >Assess</a>
+          <a class="btn btn-primary btn-sm" >Assessments</a>
         </td>
       </tr>
       </tbody>
