--- a/src/main/resources/templates/patHistory/update.html
+++ b/src/main/resources/templates/patHistory/update.html
@@ -17,10 +17,10 @@
   </div>
   <p></p>
   <legend class="scheduler-border">Update a note for the patient</legend>
-  <p class="row"> <h4> Patient : <span th:text="${patient.get().firstName} + ' ' + ${patient.get().lastName} + ' (' + ${patient.get().birthdate} + ')'"></span></h4><br/></p>
+  <p class="row"> <h4> Patient : <span th:text="${patient.firstName} + ' ' + ${patient.lastName} + ' (' + ${patient.birthdate} + ')'"></span></h4><br/></p>
   <p></p>
   <div class="row">
-    <form action="#" th:action="@{/patient/{id}/patHistory/update/{noteId}(id=${patient.get().id},noteId=${note.getId()})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
+    <form action="#" th:action="@{/patient/{id}/patHistory/update/{noteId}(id=${patient.id},noteId=${note.getId()})}" th:object="${note}" method="post" class="form-horizontal" style="width: 100%">
       <div class="form-group">
         <label for="dateNote" class="col-sm-2 control-label">Date</label>
         <div class="col-sm-10">
@@ -38,7 +38,7 @@
      <div class="form-group">
         <div class="col-sm-12">
           <input type="hidden" th:field="*{id}">
-          <a class="btn btn-danger btn-sm" th:href="@{/patient/patHistory/list/{id}(id=${patient.get().id})}">Cancel</a>
+          <a class="btn btn-danger btn-sm" th:href="@{/patient/patHistory/list/{id}(id=${patient.id})}">Cancel</a>
           <input class="btn btn-primary btn-sm" type="submit" value="Update note">
         </div>
       </div>
