--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,7 +7,7 @@
     <title> Mediscreen App </title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
-<body th:style="'background: url(/images/background.png) no-repeat right fixed;'">
+<body th:style="'background: url(/images/background.png) no-repeat center fixed;'">
     <div sec:authorize="isAuthenticated()">
         <button type="button" class="btn btn-outline-info">
             <a href="javascript: document.logoutForm.submit()">Sign out</a>
@@ -19,7 +19,7 @@
               <p class="display-2 blockquote text-center mb-1 bg-primary lead">WELCOME TO MEDISCREEN HOME PAGE</p>
 
             <p>
-                <img th:src="@{/images/logo.png}">
+                <img th:src="@{/images/logo.png}" th:style="'text-align: center;'">
             </p>
             <div sec:authorize ="hasAuthority('ADMIN')" >
                     <a class="btn btn-primary btn-lg" href="/user/list" role="button">User management</a>
