--- a/src/main/resources/templates/patient/add.html
+++ b/src/main/resources/templates/patient/add.html
@@ -26,14 +26,14 @@
             <div class="form-group">
                 <label for="firstName" class="col-sm-2 control-label">firstName</label>
                 <div class="col-sm-10">
-                    <input type="text" required th:field="*{firstName}" id="firstName" placeholder="Patient firstName" class="col-4">
+                    <input type="text" th:maxlength="100" required th:field="*{firstName}" id="firstName" placeholder="Patient firstName" class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}"></p>
                 </div>
             </div>
             <div class="form-group">
                 <label for="lastName" class="col-sm-2 control-label">lastName</label>
                 <div class="col-sm-10">
-                    <input type="text" required th:field="*{lastName}" id="lastName" placeholder="Patient lastName"
+                    <input type="text" required th:maxlength="100" th:field="*{lastName}" id="lastName" placeholder="Patient lastName"
                            class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}"></p>
                 </div>
@@ -60,14 +60,14 @@
             <div class="form-group">
                 <label for="address" class="col-sm-2 control-label">address</label>
                 <div class="col-sm-10">
-                    <input type="text" th:field="*{address}" id="address" placeholder="Patient address" class="col-4">
+                    <input type="text" th:maxlength="200" th:field="*{address}" id="address" placeholder="Patient address" class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('address')}" th:errors="*{address}"></p>
                 </div>
             </div>
             <div class="form-group">
                 <label for="phone" class="col-sm-2 control-label">Phone Number</label>
                 <div class="col-sm-10">
-                    <input type="text" th:field="*{phone}" id="phone" placeholder="Patient phone" class="col-4">
+                    <input type="text" th:maxlength="12" th:field="*{phone}" id="phone" placeholder="Patient phone" class="col-4">
                     <p class="text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></p>
                 </div>
             </div>
