--- a/src/main/resources/templates/patHistory/list.html
+++ b/src/main/resources/templates/patHistory/list.html
@@ -17,7 +17,9 @@
     </div>
     <p></p>
     <p class="display-1 blockquote text-center mb-1 bg-primary lead">List of patient note</p>
-    <p class="row"> <h4> Patient : <span th:text="${patient.getFirstName()} + ' ' + ${patient.getLastName()} + ' (' + ${patient.getBirthdate()} + ')'"></span></h4><br/>
+    <p class="row"> <h3> Patient : <span th:text="${patient.getFirstName()} + ' ' + ${patient.getLastName()} + ' (' + ${assessment.getPatientAge()} + ' ans)'"></span></h3><br/>
+    <p class="row"> <h4> Diabet assessment : <span th:text="${assessment.assessmentLevel}"></span></h4><br/></p>
+
     <p></p>
     <div class="table-responsive">
         <a class="btn btn-primary btn-sm" th:href="@{/patient/patHistory/add/{id}(id=${patient.getId()})}">Add New Note</a>
